# staarb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  demo.ipynb  pyproject.toml
src/staarb/: __main__.py  utils.py
src/staarb/cli/: backtest.py  dashboard.py
src/staarb/clients/: __init__.py  mock.py
src/staarb/core/: enums.py  types.py
src/staarb/core/bus/: event_bus.py  events.py  subscribers.py
src/staarb/data/: exchange_info_fetcher.py  ohlc_fetcher.py
src/staarb/persistence/: backtest_storage.py  models.py  storage.py
src/staarb/portfolio/: __init__.py  portfolio.py  position.py
src/staarb/strategy/: __init__.py  base.py  johansen_model.py  signal_generator.py  statistical_arbitrage.py
src/staarb/trader/: order_executor.py
tests/: __init__.py  conftest.py  test_utils.py
tests/cli/: test_backtest.py
tests/clients/: test_mock.py
tests/core/: test_types.py
tests/persistence/: test_storage.py
tests/strategy/: test_base.py  test_johansen_model.py  test_signal_generator.py  test_statistical_arbitrage.py
tests/trader/: test_order_executor.py
